--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "livecoding",
   "version": "0.1.0",
-  "description": "API wrapper for Livecoding.tv",
-  "main": "dist/livecoding.js",
+  "description": "A simple wrapper for the Livecoding.tv API",
+  "main": "dist/Livecoding.js",
   "scripts": {
-    "test": "mocha"
+    "build": "babel src -d dist",
+    "prepublish": "npm run build",
+    "test": "mocha && standard"
   },
   "repository": {
     "type": "git",
@@ -30,9 +32,11 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.6.0",
+    "esdoc-es7-plugin": "0.0.3",
     "mocha": "^2.4.5",
     "proxyquire": "^1.7.4",
-    "sinon": "^1.17.3"
+    "sinon": "^1.17.3",
+    "standard": "^6.0.7"
   },
   "dependencies": {
     "expect": "^1.14.0",
